--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>勤怠管理</title>
+    <title>勤退管理</title>
 </head>
 <body>
     <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSf3OnMBRCRvqzd2-zwkSCEVRZhJdiUmk3whHH47gVx4Y74itg/formResponse" method="post">
-        <h1>◆勤怠管理◆</h1>
+        <h1>◆勤退管理◆</h1>
         <input type="text" value="" id="set_type" name="entry.72969316" hidden>
         <div id="kintai">
             <script src="script.js"></script>
