--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <script src="script.js"></script>
             <button onclick=work()>出勤</button>
             <button onclick=worked()>退勤</button>
+            <button onclick=ref()>休開</button>
+            <button onclick=refed()>休終</button>
         </div>
     </form>
 </body>
